examples/test/testpolicy6741.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6741
  namespace: namespace296
spec:
  podSelector:
    matchLabels:
      key32: value40
      key16: value5
      key43: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value22
      podSelector:
        matchLabels:
          key40: value23
          key26: value20
          key25: value2
